* NoSuchConversationException now triggers a NoSuchFlowExecution exception.
* InvalidContinuationIdException, ContinuationNotFoundException, and ContinuationUnmarshalException 
  now trigger a FlowExecutionRestorationException.

Package org.springframework.webflow.executor
* Refined PortletFlowController to no longer set flowExecutionKey render parameter when an execution terminates.
  
Package org.springframework.webflow.registry
* Made NoSuchFlowDefinitionException a standalone exception of the flow registry subsystem.

Package org.springframework.webflow.samples
* Simplified 'flowLauncher' to take advantage of latest attribute mapping features.
* Simplified 'fileUpload' to take advantage of convenient MultipartFile parameter access support.
* Refined 'birthdate', 'sellitem', and 'sellitem-jsf' to use simpler "bind" methods instead of 'bindAndValidate' with a 'validateUsingValidatorMethod=true' flag.

Package org.springframework.webflow.support
* Fixed bug in FlowRedirectSelector where a NPE was thrown on null redirect expression.
* Removed RedirectType. Classes using it now have a simple boolean redirect flag.

Changes in version 1.0 RC2 (09.6.2006)
------------------------------------

Overall
* Moved project source control (with history preserved) to sourceforge subversion (SVN) repository at:
      https://svn.sourceforge.net/svnroot/springframework/spring-projects/trunk
* Updated projects structure to maven2 standard (e.g. src/main/java, src/test/java).
* Spring-projects JAR repository structure now follows maven2 standard.

Package org.springframework.webflow
* Removed 'requiredType' not null check on AttributeMap accessor methods; if no requiredType is specified
  the type assert is simply not performed.
* Fixed bug in Flow.end where outputMapper source and target arguments were backwards.
* Removed unused constructors in AttributeMap.
* Added CollectionUtils.singleEntryMap for easily populating a UnmodifiableAttributeMap with a single attribute.